--- a/nginx.conf
+++ b/nginx.conf
@@ -4,20 +4,19 @@ server {
     root /home/site/wwwroot;
     index index.php index.html;
     server_name _;
-    
-    # Serve static files directly
-    location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
+
+    # Serve static files langsung
+    location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot|pdf)$ {
         expires 30d;
-        access_log off;
         try_files $uri =404;
     }
-    
-    # Route all requests to index.php (for PHP routing)
+
+    # Route semua request ke app.php (sama kayak .htaccess)
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri $uri/ /app.php?$query_string;
     }
-    
-    # Handle PHP files
+
+    # Handle PHP
     location ~ \.php$ {
         fastcgi_pass unix:/run/php/php-fpm.sock;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
