--- a/.htaccess
+++ b/.htaccess
@@ -1,19 +1,24 @@
 Options -Indexes
 
 RewriteEngine On
+RewriteBase /jagonugas-native
 
-# Jika file/folder ada, langsung akses
+# ===== BYPASS: Payment files - akses langsung tanpa routing =====
+RewriteCond %{REQUEST_URI} ^/jagonugas-native/payment-.*\.php$ [NC]
+RewriteRule ^ - [L]
+
+# ===== File/folder exist - akses langsung =====
 RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^ - [L]
 
-# Jika request ke root (/), pakai index.php
+# ===== Root request - pakai index.php =====
 RewriteRule ^$ index.php [L]
 
-# Selain itu, arahkan ke app.php
+# ===== Semua request lain - route ke app.php =====
 RewriteRule ^(.+)$ app.php [QSA,L]
 
-# ===== DEV ONLY: matikan cache biar CSS/JS/IMG selalu fresh =====
+# ===== DEV ONLY: Disable cache untuk asset files =====
 <IfModule mod_headers.c>
   <FilesMatch "\.(css|js|png|jpg|jpeg|gif|svg|webp|ico)$">
     Header always set Cache-Control "no-store, no-cache, max-age=0, must-revalidate"
