--- a/.htaccess
+++ b/.htaccess
@@ -3,26 +3,49 @@ Options -Indexes
 RewriteEngine On
 RewriteBase /jagonugas-native
 
+
+# ===== LARGE FILE UPLOAD SETTINGS =====
+<IfModule mod_php.c>
+    php_value upload_max_filesize 300M
+    php_value post_max_size 310M
+    php_value max_execution_time 600
+    php_value max_input_time 600
+    php_value memory_limit 512M
+</IfModule>
+
+# Request timeout untuk large uploads
+<IfModule mod_reqtimeout.c>
+    RequestReadTimeout header=60 body=600
+</IfModule>
+
+# LimitRequestBody (0 = unlimited)
+LimitRequestBody 0
+
+
 # ===== BYPASS: Payment files - akses langsung tanpa routing =====
 RewriteCond %{REQUEST_URI} ^/jagonugas-native/payment-.*\.php$ [NC]
 RewriteRule ^ - [L]
+
 
 # ===== File/folder exist - akses langsung =====
 RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^ - [L]
 
+
 # ===== Root request - pakai index.php =====
 RewriteRule ^$ index.php [L]
+
 
 # ===== Semua request lain - route ke app.php =====
 RewriteRule ^(.+)$ app.php [QSA,L]
 
+
 # ===== DEV ONLY: Disable cache untuk asset files =====
 <IfModule mod_headers.c>
-  <FilesMatch "\.(css|js|png|jpg|jpeg|gif|svg|webp|ico)$">
-    Header always set Cache-Control "no-store, no-cache, max-age=0, must-revalidate"
-    Header always set Pragma "no-cache"
-    Header always set Expires "0"
-  </FilesMatch>
+    <FilesMatch "\.(css|js|png|jpg|jpeg|gif|svg|webp|ico)$">
+        Header always set Cache-Control "no-store, no-cache, max-age=0, must-revalidate"
+        Header always set Pragma "no-cache"
+        Header always set Expires "0"
+    </FilesMatch>
 </IfModule>
