--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "require": {
         "phpmailer/phpmailer": "^7.0",
         "phpoffice/phpspreadsheet": "^5.3",
-        "dompdf/dompdf": "*"
+        "dompdf/dompdf": "^3.1"
     }
 }
